# sportscore

./: .gitignore  pyproject.toml  setup.sh
sportscore/: CLAUDE.md  __init__.py  config.py  league_config.py  sport_config.py
sportscore/cli/: __init__.py  base.py  commands.py  discovery.py  main.py
sportscore/db/: __init__.py  base_repository.py  league_db_proxy.py  mongo.py
sportscore/features/: __init__.py  base_registry.py  stat_engine.py  stat_loader.py
sportscore/features/traits/: __init__.py  conference.py
sportscore/market/: __init__.py  connector.py  game_markets.py  kalshi.py
sportscore/models/: __init__.py  base_artifact_loader.py  base_ensemble.py
sportscore/pipeline/: __init__.py  base_pipeline.py  parallel.py  training_csv.py
sportscore/pipeline/traits/: __init__.py  conference.py  geocode.py
sportscore/services/: __init__.py  base_config_manager.py  base_prediction.py  betting_report.py  bin_trust.py  jobs.py  market_bins.py  market_calibration.py  market_calibration_service.py
sportscore/sports/: baseball.yaml  basketball.yaml  football.yaml  hockey.yaml  soccer.yaml
sportscore/stats/: elo_cache.py
sportscore/training/: __init__.py  base_dataset_builder.py  base_stacking.py  cache_utils.py  model_evaluation.py  model_factory.py  run_tracker.py  schemas.py
sportscore/utils/: collection.py  date_utils.py  db_queries.py
sportscore/web/: __init__.py  app.py  context.py  filters.py  service_helpers.py  services.py  shared_pages.py  shared_routes.py
sportscore/web/templates/: base.html  cached_league_stats.html  elo_manager.html  (+8 more)
(+1 files in other folders)
